--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div>His Goals</div>
     <div>Founding Myth</div>
     <div><img src="thatch-being-installed-13.jpg"></div>
+    <div><img src="asphalt-roof-shingle-59022-1665489.jpg"></div>
     <div><img src="wattle_and_daub_2_by_sharandra-d5bb23e.jpg"></div>
-    <div><img src="asphalt_intro.gif"></div>
     <div><img src="Le_Corbusier-Chandigarh-Palais_des_Assemblees_du_Penjab_et_de_lHaryana.jpg"></div>
     <div><img src="Le-Corbusier-unite-habitation-france-c1950.jpg"></div>
     <div>What we Lost</div>
